--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -1,3 +1,8 @@
+@misc{Arduino,
+  title = {Arduino},
+  howpublished = "\url{https://www.arduino.cc}"
+}
+
 @article{SystemC,
   title={SystemC},
   author={{Accellera Systems Initiative} and others},
