--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -3,6 +3,37 @@
   howpublished = "\url{https://www.arduino.cc}"
 }
 
+@misc{StepMotor,
+  title = {Step motor},
+  howpublished = "\url{https://en.wikipedia.org/wiki/Stepper_motor}"
+}
+
+
+@misc{TwoPhase,
+  title = {Two-phase eletric power},
+  howpublished = "\url{https://en.wikipedia.org/wiki/Two-phase_electric_power}"
+}
+
+@misc{MotorDatasheet,
+  title = {Datasheet 28BYJ-48},
+  howpublished = "\url{http://robocraft.ru/files/datasheet/28BYJ-48.pdf}"
+}
+
+@misc{DriverMotorDatasheet,
+  title = {Datasheet ULN2003},
+  howpublished = "\url{https://www.electronicoscaldas.com/datasheet/ULN2003A-PCB.pdf}"
+}
+
+@misc{VoltageDivider,
+  title = {Voltage divider},
+  howpublished = "\url{https://en.wikipedia.org/wiki/Voltage_divider}"
+}
+
+
+
+
+
+
 @article{SystemC,
   title={SystemC},
   author={{Accellera Systems Initiative} and others},
