--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -1,3 +1,13 @@
+@misc{Photoresistor1,
+  title = {Arduino},
+  howpublished = "\url{https://en.wikipedia.org/wiki/Photoresistor}"
+}
+
+@misc{Photoresistor2,
+  title = {Arduino},
+  howpublished = "\url{https://www.electronics-notes.com/articles/electronic_components/resistors/light-dependent-resistor-ldr.php}"
+}
+
 @misc{Arduino,
   title = {Arduino},
   howpublished = "\url{https://www.arduino.cc}"
@@ -6,12 +16,6 @@
 @misc{StepMotor,
   title = {Step motor},
   howpublished = "\url{https://en.wikipedia.org/wiki/Stepper_motor}"
-}
-
-
-@misc{TwoPhase,
-  title = {Two-phase eletric power},
-  howpublished = "\url{https://en.wikipedia.org/wiki/Two-phase_electric_power}"
 }
 
 @misc{MotorDatasheet,
@@ -27,6 +31,11 @@
 @misc{VoltageDivider,
   title = {Voltage divider},
   howpublished = "\url{https://en.wikipedia.org/wiki/Voltage_divider}"
+}
+
+@misc{Video,
+  title = {Useful video},
+  howpublished = "\url{https://www.youtube.com/watch?v=B86nqDRskVU}"
 }
 
 
